--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,31 @@
 .container {
-  max-width: 900px;
-  margin: 0 auto;
-  padding: 2rem;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 .header {
   background-color: var(--panel-color);
   color: var(--accent-color);
-  padding: 1rem;
-  border-radius: 12px;
   display: flex;
   align-items: center;
-  gap: 1rem;
-  margin-bottom: 2rem;
+  margin-bottom: 2vh;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-  flex-direction: column;
+  height: 10vh;
+  width: 100%;
+  justify-content: center;
+}
+
+.logomenu{
+  width: 95%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .logo {
-  height: 36px;
+  height: 30px;
   width: auto;
   filter: brightness(1.2);
 }
@@ -28,15 +35,21 @@
   font-weight: 600;
 }
 
+.formimage{
+  width: 90%;
+  height: 80vh;
+  display: flex;
+  justify-content: space-between;
+}
+
 .form {
   background: var(--panel-color);
   padding: 2rem;
   border-radius: 12px;
   box-shadow: 0 2px 10px rgba(0,0,0,0.4);
-  margin-bottom: 2rem;
   display: flex;
   flex-direction: column;
-  gap: 1.5rem;
+  width: 20%;
 }
 
 .form label {
@@ -113,6 +126,11 @@ button:hover {
   margin-top: 1rem;
 }
 
+.svgimage{
+  width: 75%;
+  height: 80vh;
+}
+
 #canvas-wrapper {
   background: #1b1b1b;
   position: relative;
@@ -121,6 +139,7 @@ button:hover {
   border-radius: 8px;
   box-shadow: 0 2px 8px rgba(0,0,0,0.4);
   margin-bottom: 2rem;
+  height: 100%;
 }
 
 .wrapper-cota-h {
@@ -159,4 +178,11 @@ button:hover {
 #canvas-container svg polygon {
   fill: #ff7800 !important;
   stroke: none !important;
+}
+
+.footer{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 8vh;
 }
