--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 1.1vw;
+}
+
+
+
 :root {
   --accent-color: #ff7800;
   --bg-color: #121212;
@@ -5,11 +15,10 @@
   --text-color: #f0f0f0;
   --border-color: #2c2c2c;
   --hover-color: #ff8c1a;
+  
 }
 
 body {
-  margin: 0;
-  padding: 0;
   font-family: 'Segoe UI', sans-serif;
   background-color: var(--bg-color);
   color: var(--text-color);
